Safari body overflow-y bug fix

--- a/includes/css/style.less
+++ b/includes/css/style.less
@@ -34,6 +34,11 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+body.safari-only {
+	overflow-y: hidden;
+	position: relative;
+}
+
 form {
 	margin: 0;
 	padding: 0;
